Stop the floating nav from growing too large.

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -536,4 +536,7 @@ form > ul > li > ul.errorlist > li {
 
 /* Large screens */
 @media screen and (min-width: 1200px) {
+    #main > nav.fixed_when_big {
+        width: 288px;
+    }
 }
